--- a/md_DdM.css
+++ b/md_DdM.css
@@ -3,3 +3,27 @@
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+
+}
+
+h4 {
+
+}
+
+h5 {
+    font-style: italic;
+}
+
+h6 {
+    color: grey;
+}
